Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116517

Zero-width space in qaccessiblewidgets.cpp causing compilation error

    XMLWordPrintable

Details

    • All
    • ca4633f24 (dev), f451fb4ad (tqtc/lts-5.15), 8405fc5cf (6.5), 37e359680 (6.6)

    Description

      In qtbase/src/widgets/accessible/qaccessiblewidgets.cpp there is a Zero-width space character in a warning message, this causes compilation issues with the Intel Compiler.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            ytterx Yorick Bosman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes