QAccessibleWidget: Remove pointless ZWSP in warning message

There doesn't seem to be reason for it to exist, and apparently it
causes compilation failures with icc.

Fixes: QTBUG-116517
Initial-patch-by: Yorick Bosman
Change-Id: Ic2ed1d4318d522851278afa7f9791441af4fa709
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit ca4633f243a23de1848ebf32aef45f23d6d18154)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>